--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -75,18 +75,15 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=initial_global
-# ●=string@109
-DAOaEc=set LANG to {}
 # ◆=configure_sshd
-# ●=info@143
+# ●=info@151
 Dj3cJb=sshd is not installed, installing now...
-# ●=info@158
+# ●=info@166
 BLGrby=SSH configuration has been applied
-# ●=warning@160
+# ●=warning@168
 Dq9sXa=systemctl restart {} failed, please execute manually
 # ◆=install_docker
-# ●=info@177
+# ●=info@185
 BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
@@ -114,29 +111,21 @@ C0Yu3-=# {0} 语言包，文档结构：\n\
 # ●=info@91
 Aw3y8l={0} 语言文件已创建
 
-# ■=lib/bash_utils.sh
-# ◆=do_keyboard_interrupt
-# ●=exiterr@57
-Ai7UlQ=operation is cancelled
-# ◆=confirm_action
-# ●=error@67
-Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-# ●=string@39
+# ●=string@38
 DtZJ4v=Automatically installing {} ...
-# ●=success@47
+# ●=success@49
 DeH9WO={} installation successful
-# ●=exiterr@52
+# ●=exiterr@55
 Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
 # ◆=monitor_progress
-# ●=string@111
+# ●=string@114
 ATkIIM=Monitoring process {}...
-# ●=_mf@143
+# ●=_mf@146
 APOzfr=Completed
 # ◆=user_file_permit
-# ●=string@191
+# ●=string@194
 BHeYRA={} ownership changed to {}
 
 # ■=lib/docker.sh
@@ -153,31 +142,26 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 BzOdCD=JSON format error
 
 # ■=lib/network.sh
-# ◆=count_down
-# ●=info@37
-A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
-# ◆=config_nmcli
-# ●=exiterr@54
-AmqOYu=nmcli is not installed or unavailable. Please install it and try again
-# ◆=config_systemd_networkd
-# ●=exiterr@189
-DR9Q62=systemd-networkd is not installed or unavailable
-# ◆=network_config
-# ●=_mf@258
+# ◆=cat_footer
+# ●=_mf@43
 DXOXA_=[{}] Network switched. Log: {}
-# ●=_mf@259
+# ●=_mf@44
 Co-uGi=[{}] Failed to switch network. Log: {}
-# ●=string@261
+# ◆=count_down
+# ●=info@76
+A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
+# ◆=network_config
+# ●=string@228
 C1n7FE=NetworkManager is running (systemctl status NetworkManager)
-# ●=string@264
+# ●=string@231
 DSEEUY=ifupdown is running (systemctl status networking)
-# ●=string@267
+# ●=string@234
 DdVMc5=wicked is running (systemctl status wicked)
-# ●=string@270
+# ●=string@237
 CbKEUc=network-scripts is running (systemctl status network)
-# ●=string@274
+# ●=string@241
 DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
-# ●=exiterr@277
+# ●=exiterr@244
 AVcfZk=Unknown network manager. Unable to configure static IP
 
 # ■=lib/python_bridge.sh
@@ -275,24 +259,34 @@ BMhBIw=Response Time
 BclW-G=Failed Mirrors
 # ●=_mf@407
 AOlJ5P=Status
+# ◆=do_choose_pip_mirror
+# ●=string@440
+Dz9vrd=Configuration canceled. Keeping current settings
+# ●=_mf@465
+B4r_eA=Pip has been configured to use the new mirror
+# ●=_mf@466
+AoQOEG=Mirror
+# ●=_mf@467
+Bovsx6=Trusted Host
 # ◆=choose_pip_mirror
 # ●=warning@433
 D1ECQh=No available mirrors found. Please check your network connection.
-# ●=_mf@438
+# ●=_mf@485
 CIq9J2=Please select a mirror to use. Enter 0 to skip
-# ●=string@442
-Dz9vrd=Configuration canceled. Keeping current settings
-# ●=_mf@469
-B4r_eA=Pip has been configured to use the new mirror
-# ●=_mf@470
-AoQOEG=Mirror
-# ●=_mf@471
-Bovsx6=Trusted Host
-# ●=string@477
-CIsYrg=[{}] Invalid input! Please enter a number between 0 and {}
+# ●=_mf@489
+ClNNly=Invalid input! Please enter a number between 0 and {}
+# ●=_mf@490
+BEMgXg=Skipping mirror selection
 # ◆=create_py_venv
-# ●=_mf@496
+# ●=_mf@502
 DLX7Eq=Testing global pip mirror speeds...
+
+# ■=lib/read_util.sh
+# ◆=action_handler
+# ●=string@21
+Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
+# ●=string@30
+BjJxaz=Invalid input! Please enter a number
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
@@ -343,15 +337,13 @@ DVkFEN=root login disabled
 AZKZT4=Current SSH is running on Port {}, {}
 # ●=_mf@112
 BNOqlk=Would you like to reconfigure it?
-# ●=_mf@120
+# ●=_mf@125
 DzCitM=Enter new SSH port (current: {}): 
-# ●=_mf@122
-AcZ5l2=SSH port set to
-# ●=_mf@130
+# ●=_mf@126
 ARXwDI=Failed to set SSH port
-# ●=string@132
-A2bCmM=\nOperation cancelled
-# ●=_mf@136
+# ●=_mf@138
+AcZ5l2=SSH port set to
+# ●=_mf@143
 D6jDYn=Allow root login via SSH?
 
 # ■=python/file_util.py
@@ -416,116 +408,116 @@ A4CItw={0} Language file has been deleted
 # ◆=del_lang_files
 # ●=_mf@217
 CwGdLu=Are you sure to delete the {0} language file?
-# ●=_mf@219
+# ●=_mf@218
 Be_6w4=Action cancelled. File deletion aborted
 
 # ■=python/mirror/linux_speed.py
 # ◆=fetch_mirror_list
-# ●=string@97
+# ●=string@98
 B6R_HD={} Mirror Speed Testing Tool
-# ●=string@108
+# ●=string@109
 AeQJal=Failed to fetch the mirror list: {}
 # ◆=test_all_mirrors
-# ●=string@211
+# ●=string@212
 CCfiT5=Starting to test {} mirrors, filtering the top {} fastest mirrors, please wait...
-# ●=_mf@237
+# ●=_mf@238
 DnXJti=Progress
-# ●=string@273
+# ●=string@274
 AvNok2=Ctrl+C detected, stopping remaining tasks...
-# ●=string@293
+# ●=string@294
 C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
-# ◆=choose_mirror
-# ●=string@320
-CCGCmP=No available mirrors found
+# ◆=do_choose_mirror
 # ●=string@328
-Dzjmam=Please select a mirror to use (1-{}), enter 0 to keep current settings
-# ●=_mf@329
-BiFkf4=Please enter your choice (0-{}): 
-# ●=string@335
 DhCuAq=Configuration cancelled, keeping current settings
-# ●=_mf@345
+# ●=_mf@334
 Cph1R3=You selected
-# ●=_mf@346
+# ●=_mf@335
 C68uzc=Download speed
-# ●=error@352
+# ◆=choose_mirror
+# ●=string@321
+CCGCmP=No available mirrors found
+# ●=string@348
+Dzjmam=Please select a mirror to use (1-{}), enter 0 to keep current settings
+# ●=_mf@349
+BiFkf4=Please enter your choice (0-{}): 
+# ●=_mf@350
 CvE-z3=Invalid input! Please enter a number between 0-{}
-# ●=error@356
-BjJxaz=Invalid input! Please enter a number
-# ●=string@361
-AxAUpX=Operation canceled
 # ◆=print_results
-# ●=_mf@368
+# ●=_mf@359
 AOAev1=Rank
-# ●=_mf@368
+# ●=_mf@359
 Ah5sGh=Speed(KB/s)
-# ●=_mf@368
+# ●=_mf@359
 CD_dye=Resp Time(s)
-# ●=_mf@368
+# ●=_mf@359
 A03XzI=Succ Rate
-# ●=_mf@368
+# ●=_mf@359
 CZk3S6=Country/Region
-# ●=_mf@368
+# ●=_mf@359
 AyPHP9=Mirror URL
 # ◆=run
-# ●=string@383
+# ●=string@374
 Dsnlq3=Could not find the {} source configuration file
-# ●=_mf@387
+# ●=_mf@378
 AD12ND=Would you like to reselect a mirror?
-# ●=_mf@389
-BkZHXM=Current {} mirror
-# ●=string@398
+# ●=string@380
+D6k0Xl=Current {} mirror: {}
+# ●=string@388
 D4jlM5=An error occurred during program execution: {}
-# ●=_mf@406
+# ●=_mf@396
 AiVn1Y=Would you like to upgrade the packages immediately?
 
 # ■=python/mirror/linux_speed_arch.py
 # ◆=choose_mirror
-# ●=_mf@132
+# ●=_mf@130
 BwzzIm=Would you like to switch to the new mirror list?
 
+# ■=python/mirror/linux_speed_ubt.py
+# ◆=valid_fetch_mirror_list
+# ●=string@125
+DONU3t=Country code {} does not exist in the list! Please verify http://mirrors.ubuntu.com/
+# ◆=fetch_mirror_list
+# ●=_mf@140
+BQVoKn=Please select a country/region code (press Enter to use the default '{}'):
+
 # ■=python/network_util.py
-# ◆=setup_octet
-# ●=string@131
-CPwsn7=The current IP address is invalid
-# ●=_mf@136
-CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]: 
-# ●=string@142
-DTArwK=Please enter a number
-# ●=string@147
+# ◆=valid_setup_octet
+# ●=string@137
 BteKhj=The input must be between 1 and 255
-# ●=string@151
+# ●=string@141
 D4k_4H=The static IP address cannot be the same as the gateway
-# ●=string@160
-A2bCmM=\nOperation cancelled
+# ◆=setup_octet
+# ●=string@132
+CPwsn7=The current IP address is invalid
+# ●=_mf@146
+CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]: 
 # ◆=fix_ip
-# ●=info@181
+# ●=info@176
 B41yVK={} Cloud servers do not require a static IP
-# ●=_mf@188
+# ●=_mf@183
 CYYp0S=Server is configured with a static IP
-# ●=_mf@191
+# ●=_mf@186
 D6UA5B=Server may be configured with a static IP
-# ●=_mf@194
+# ●=_mf@189
 Cp93zR=Server is configured with a dynamic IP
-# ●=string@196
+# ●=string@191
 AzA-3k=Server may be configured with a dynamic IP
-# ●=_mf@198
+# ●=_mf@193
 CCY-S1=Would you like to adjust it?
-# ●=_mf@199
+# ●=_mf@194
 C2TtcR=Do not modify the network configuration
 
-# ■=python/system.py
-# ◆=confirm_action
-# ●=_mf@59
-BRLnrE=Operation cancelled
-# ●=_mf@61
-BuJv_n=Invalid input. Please enter Y or N
-# ●=string@98
-CeZZbb=Input processing error: {}
+# ■=python/read_util.py
+# ◆=action_handler
+# ●=string@38
+Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
+# ●=string@49
+BjJxaz=Invalid input! Please enter a number
 
 # ■=python/test_lang.py
 # ◆=show_help_info
 # ●=exiterr@25
 CQyjis=Usage: show_help_info [command]   \
         Available commands: find, ls   
-# ●=info@95
+# ●=info@94
 Aw3y8l={0} 语言文件已创建
