改用MSG_OPER_CANCELLED和MSG_OPER_FAIL_BOOL预定义变量，避免翻译问题

--- a/config/lang/.en.properties
+++ b/config/lang/.en.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="SUCCESS"
 MSG_WARNING="WARNING"
 MSG_INFO="INFO"
 MSG_OPER_CANCELLED="Operation cancelled"
+MSG_OPER_FAIL_BOOL="Please enter 'y' for yes, 'n' for no, or press Enter for default"
+MSG_OPER_FAIL_NUMBER="Invalid input! Please enter a number"
 # others
 VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
 Licensed under GPL v3. This is free software with ABSOLUTELY NO WARRANTY."
