--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="Éxito"
 MSG_WARNING="Aviso"
 MSG_INFO="Info"
 MSG_OPER_CANCELLED="Operación cancelada"
+MSG_OPER_FAIL_BOOL="Ingrese 'y' para sí, 'n' para no, o Enter para el valor predeterminado."
+MSG_OPER_FAIL_NUMBER="¡Inválido! Ingrese un número."
 # others
 VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
 Licenciado bajo GPL v3. Este es un software libre SIN NINGUNA GARANTÍA."
