--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="Succès"
 MSG_WARNING="Avert."
 MSG_INFO="Info"
 MSG_OPER_CANCELLED="Opération annulée"
+MSG_OPER_FAIL_BOOL="Tapez 'y' pour oui, 'n' pour non, ou Entrée pour la valeur par défaut."
+MSG_OPER_FAIL_NUMBER="Invalide ! Entrez un nombre."
 # others
 VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
 Sous licence GPL v3. Ce logiciel est gratuit et sans AUCUNE GARANTIE."
