--- a/config/lang/.ja.properties
+++ b/config/lang/.ja.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="成功"
 MSG_WARNING="警告"
 MSG_INFO="情報"
 MSG_OPER_CANCELLED="操作がキャンセルされました"
+MSG_OPER_FAIL_BOOL="'y' で はい、'n' で いいえ、または Enter でデフォルト。"
+MSG_OPER_FAIL_NUMBER="無効です。数字を入力してください。"
 # others
 VERSION_CLAIM="{0} - 著作権 (C) {1} {2}\n\
 GPL v3 の下でライセンスされています。これは一切の保証がないフリーソフトウェアです。"
