--- a/config/lang/.zh.properties
+++ b/config/lang/.zh.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="成功"
 MSG_WARNING="警告"
 MSG_INFO="信息"
 MSG_OPER_CANCELLED="操作已取消"
+MSG_OPER_FAIL_BOOL="请输入 'y' 表示是，'n' 表示否，或者直接按回车使用默认值"
+MSG_OPER_FAIL_NUMBER="输入无效！请输入一个数字"
 # others
 VERSION_CLAIM="{0} - 版权所有 (C) {1} {2}\n\
 根据 GPL v3 授权。这是完全没有任何担保的免费软件。"
