--- a/config/lang/.zh_TW.properties
+++ b/config/lang/.zh_TW.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="成功"
 MSG_WARNING="警告"
 MSG_INFO="資訊"
 MSG_OPER_CANCELLED="操作已取消"
+MSG_OPER_FAIL_BOOL="輸入 'y' 是，'n' 否，Enter 為預設。"
+MSG_OPER_FAIL_NUMBER="無效！請輸入數字。"
 # others
 VERSION_CLAIM="{0} - 版權所有 (C) {1} {2}\n\
 根據 GPL v3 授權。這是完全沒有任何擔保的免費軟體。"
