--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="Erfolg"
 MSG_WARNING="Warn."
 MSG_INFO="Info"
 MSG_OPER_CANCELLED="Operation cancelled"
+MSG_OPER_FAIL_BOOL="Geben Sie 'y' für Ja, 'n' für Nein ein oder Enter für Standard."
+MSG_OPER_FAIL_NUMBER="Ungültig! Bitte eine Zahl eingeben."
 # others
 VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
 Lizenziert unter GPL v3. Dies ist freie Software ohne jegliche Garantie."
