--- a/config/lang/.ko.properties
+++ b/config/lang/.ko.properties
@@ -15,6 +15,8 @@ MSG_SUCCESS="성공"
 MSG_WARNING="경고"
 MSG_INFO="정보"
 MSG_OPER_CANCELLED="작업이 취소되었습니다"
+MSG_OPER_FAIL_BOOL="'y'는 예, 'n'은 아니오, Enter는 기본값."
+MSG_OPER_FAIL_NUMBER="잘못됨! 숫자를 입력하세요."
 # others
 VERSION_CLAIM="{0} - 저작권 (C) {1} {2}\n\
 GPL v3에 따라 라이선스가 부여되었습니다. 이 소프트웨어는 어떠한 보증도 없는 무료 소프트웨어입니다."
