bash增加防抖; result_f允许传参; 其他bug fix

--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -1,7 +1,7 @@
 # global parameter
 # initialize
 INIT_SUDO_RUN="Dieses Skript muss mit sudo ausgeführt werden. Erneutes Ausführen mit sudo..."
-INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}): "
+INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}):"
 INIT_SHELL_LANG_SETUP="LANG auf {} setzen"
 INIT_SHELL_LANG_FOMAT_ERROR="Ungültiges Sprachformat. Bitte erneut eingeben (z. B. de_DE | de_DE.UTF-8)"
 INIT_SHELL_LANG_NOT_IN_LIST="Nicht in der Locale-Liste. Bitte erneut eingeben (überprüfen Sie [ locale -a ])"
@@ -9,6 +9,8 @@ INIT_SHELL_LANG_CHANGE="Skript-Sprache von [{}] zu [{}] ändern?"
 INIT_SYSTEM_START="Systemstart initialisieren"
 INIT_SYSTEM_END="Systemende initialisieren"
 INIT_LINUX_UNSUPPORT="Nicht unterstützte Linux-Distribution"
+INIT_CHMOD_FILENAME="Dateinamen"
+INIT_CHMOD_USERNAME="Eigentümer"
 # msg_handler
 MSG_ERROR="Fehler"
 MSG_SUCCESS="Erfolg"
