initial_language_utf8 => initial_language; lang_utils.sh代码重构; read_util调整逻辑

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -83,8 +83,6 @@ Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
 # ◆=monitor_progress
 ATkIIM=Monitoring process {}...
 APOzfr=Completed
-# ◆=user_file_permit
-BHeYRA={} ownership changed to {}
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -95,6 +93,12 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 # ■=lib/json_handler.sh
 # ◆=fetch_options
 BzOdCD=JSON format error
+
+# ■=lib/lang_utils.sh
+# ◆=reset_user_locale
+BBDesN=Change script language from [{}] to [{}]?
+# ◆=initial_language
+DAOaEc=set LANG to {}
 
 # ■=lib/network.sh
 # ◆=cat_footer
