--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -83,8 +83,6 @@ Ar7Pu3={} 安装失败，请手动安装，日志: {} [{}]
 # ◆=monitor_progress
 ATkIIM=监控进程 {}...
 APOzfr=完成
-# ◆=user_file_permit
-BHeYRA={} 所有权改为 {}
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -95,6 +93,12 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 # ■=lib/json_handler.sh
 # ◆=fetch_options
 BzOdCD=JSON format error
+
+# ■=lib/lang_utils.sh
+# ◆=reset_user_locale
+BBDesN=是否将脚本语言从 [{}] 更改为 [{}]?
+# ◆=initial_language
+DAOaEc=设置 LANG 为 {}
 
 # ■=lib/network.sh
 # ◆=cat_footer
