增加install_base_pkgs; 其他代码微调

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -54,8 +54,6 @@ D6sy7g=请输入语言参数，如 --lang={0}
 Dj3cJb=sshd is not installed, installing now...
 BLGrby=SSH configuration has been applied
 Dq9sXa=systemctl restart {} failed, please execute manually
-# ◆=install_docker
-BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
 # ◆=show_help_info
@@ -77,8 +75,8 @@ Aw3y8l={0} 语言文件已创建
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-DtZJ4v=Automatically installing {} ...
 DeH9WO={} installation successful
+Afthz4={} installation successful, but service is not running
 Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
 # ◆=monitor_progress
 ATkIIM=Monitoring process {}...
@@ -89,6 +87,17 @@ APOzfr=Completed
 A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
 # ◆=infra_setup
 Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
+
+# ■=lib/docker_install.sh
+# ◆=check_docker
+DpkDjV=Docker installation failure
+DF9QGO=Docker Compose installation failure，please try manual installation \
+Github Path: {}
+CtWNt-=Docker ({}) and Docker Compose ({}) are installed
+# ◆=remove_docker_apt
+BuNCex=Uninstalling {}...
+# ◆=install_docker_off_apt
+BeYkE4=Installing Docker and Docker Compose on {}...
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
@@ -216,6 +225,19 @@ ARXwDI=Failed to set SSH port
 AcZ5l2=SSH port set to
 D6jDYn=Allow root login via SSH?
 
+# ■=python/docker/docker_install.py
+# ◆=install_ask
+DPoN-q=Do you want to re-install Docker?
+CWj1nj=Docker version {} is installed and running
+BYPpAu=Docker requires version {}+, now it's {}
+# ◆=install_choose
+CedoFo=Install system-provided Docker
+ACWfb3=Install official-provided Docker
+DGT8WM=Requires Docker version {}+, {} only supports {}
+BK01mS=Version
+C7gWfw=Requires Docker version {}+, official website only supports {}
+D0Mdja=Please select a version to install (1-2). Enter 0 to skip:
+
 # ■=python/file_util.py
 # ◆=copy_file
 AlJdHZ=Source file does not exist
@@ -305,7 +327,7 @@ D4k_4H=The static IP address cannot be the same as the gateway
 # ◆=setup_octet
 CPwsn7=The current IP address is invalid
 CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]:
-# ◆=fix_ip
+# ◆=configure_nw
 B41yVK={} Cloud servers do not require a static IP
 CYYp0S=Server is configured with a static IP
 D6UA5B=Server may be configured with a static IP
