--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -54,8 +54,6 @@ D6sy7g=请输入语言参数，如 --lang={0}
 Dj3cJb=sshd 未安装，正在安装...
 BLGrby=SSH 配置已生效
 Dq9sXa=systemctl restart {} 失败，请手动执行
-# ◆=install_docker
-BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
 # ◆=show_help_info
@@ -77,8 +75,8 @@ Aw3y8l={0} 语言文件已创建
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-DtZJ4v=自动安装 {}...
 DeH9WO={} 安装成功
+Afthz4={} 安装成功, 但服务尚未启动
 Ar7Pu3={} 安装失败，请手动安装，日志: {} [{}]
 # ◆=monitor_progress
 ATkIIM=监控进程 {}...
@@ -89,6 +87,17 @@ APOzfr=完成
 A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
 # ◆=infra_setup
 Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
+
+# ■=lib/docker_install.sh
+# ◆=check_docker
+DpkDjV=Docker 安装失败
+DF9QGO=Docker Compose 安装失败，请尝试手动安装 \
+Github 路径: {}
+CtWNt-=Docker ({}) 与 Docker Compose ({}) 已安装
+# ◆=remove_docker_apt
+BuNCex=卸载 {}...
+# ◆=install_docker_off_apt
+BeYkE4=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=lib/json_handler.sh
 # ◆=fetch_options
@@ -216,6 +225,19 @@ ARXwDI=设置 SSH 端口失败
 AcZ5l2=SSH 端口已设置为
 D6jDYn=允许 root 通过 SSH 登录?
 
+# ■=python/docker/docker_install.py
+# ◆=install_ask
+DPoN-q=重新安装 Docker?
+CWj1nj=Docker 版本 {} 已安装并运行
+BYPpAu=需要 Docker 版本 {}+, 目前为 {}
+# ◆=install_choose
+CedoFo=安装系统自带 Docker
+ACWfb3=安装官方提供 Docker
+DGT8WM=需要 Docker 版本 {}+, {} 仅支持 {}
+BK01mS=版本
+C7gWfw=需要 Docker 版本 {}+, Docker官网仅支持 {}
+D0Mdja=请选择一个安装版本 (1-2). 回车(0)即跳过安装:
+
 # ■=python/file_util.py
 # ◆=copy_file
 AlJdHZ=源文件不存在
@@ -305,7 +327,7 @@ D4k_4H=输入的静态IP地址不能与网关相同
 # ◆=setup_octet
 CPwsn7=当前IP地址无效
 CNQ6-k=请输入静态IP地址的最后一段 (1-255) [默认: {}]:
-# ◆=fix_ip
+# ◆=configure_nw
 B41yVK={} 云服务器无需设置固定IP
 CYYp0S=服务器已配置静态IP
 D6UA5B=服务器可能已配置静态IP
