docker_install代码重构; read_util换行的小改动

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -13,10 +13,6 @@ AfYlCL=Error: Command '$cmd' not found.
 B2mmYr=未找到命令 '$cmd_name'
 DHeim3=未找到命令 '$cmd_name' 的元数据
 
-# ■=bin/deb/init_debian.sh
-# ◆=install_docker
-B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
-
 # ■=bin/i18n.sh
 # ◆=load_lang_files
 Bpunoh=Searching for available languages...
@@ -96,7 +92,7 @@ Github Path: {}
 CtWNt-=Docker ({}) and Docker Compose ({}) are installed
 # ◆=remove_docker_apt
 BuNCex=Uninstalling {}...
-# ◆=install_docker_off_apt
+# ◆=install_docker_apt
 BeYkE4=Installing Docker and Docker Compose on {}...
 
 # ■=lib/json_handler.sh
@@ -156,7 +152,7 @@ D6gi9n=Python {} installation completed
 # ◆=install_py_venv
 Djzzvr=Virtual environment {} already exists. Delete and reinstall it?
 C_9sLZ=Current pip mirror:
-BJVBQG={}Reinstall pip and the required Python libraries?
+COL4X1=Reinstall pip and the required Python libraries?
 AoE5L8=Skipping virtual environment creation
 6bcebee3496f45cc552aa606f8112a2d=Deleting virtual environment {}...
 96f72e8313838714d9e659fde4fd343c=Creating virtual environment {}...
@@ -235,8 +231,7 @@ CedoFo=Install system-provided Docker
 ACWfb3=Install official-provided Docker
 DGT8WM=Requires Docker version {}+, {} only supports {}
 BK01mS=Version
-C7gWfw=Requires Docker version {}+, official website only supports {}
-D0Mdja=Please select a version to install (1-2). Enter 0 to skip:
+ATAAW5=Please select a version to install (1-{}). Enter 0 to skip:
 
 # ■=python/file_util.py
 # ◆=copy_file
