--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -13,10 +13,6 @@ AfYlCL=Error: Command '$cmd' not found.
 B2mmYr=未找到命令 '$cmd_name'
 DHeim3=未找到命令 '$cmd_name' 的元数据
 
-# ■=bin/deb/init_debian.sh
-# ◆=install_docker
-B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
-
 # ■=bin/i18n.sh
 # ◆=load_lang_files
 Bpunoh=查找可用语言...
@@ -96,7 +92,7 @@ Github 路径: {}
 CtWNt-=Docker ({}) 与 Docker Compose ({}) 已安装
 # ◆=remove_docker_apt
 BuNCex=卸载 {}...
-# ◆=install_docker_off_apt
+# ◆=install_docker_apt
 BeYkE4=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=lib/json_handler.sh
@@ -156,7 +152,7 @@ D6gi9n=Python {} 安装完成
 # ◆=install_py_venv
 Djzzvr=虚拟环境 {} 已存在，是否删除重建?
 C_9sLZ=当前pip镜像:
-BJVBQG={}是否重建 pip 和所需 python 库?
+COL4X1=是否重建 pip 和所需 python 库?
 AoE5L8=跳过虚拟环境创建
 6bcebee3496f45cc552aa606f8112a2d=删除虚拟环境 {}...
 96f72e8313838714d9e659fde4fd343c=创建虚拟环境 {}...
@@ -235,8 +231,7 @@ CedoFo=安装系统自带 Docker
 ACWfb3=安装官方提供 Docker
 DGT8WM=需要 Docker 版本 {}+, {} 仅支持 {}
 BK01mS=版本
-C7gWfw=需要 Docker 版本 {}+, Docker官网仅支持 {}
-D0Mdja=请选择一个安装版本 (1-2). 回车(0)即跳过安装:
+ATAAW5=请选择一个安装版本 (1-{}). 回车(0)即跳过安装:
 
 # ■=python/file_util.py
 # ◆=copy_file
