--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -210,19 +210,23 @@ DE4sbC=Installation of {} completed
 # ■=python/config_sshd.py
 # ◆=run_command
 DWA16R=Failed to execute command: {}
-# ◆=configure_sshd
-D6wN7B=SSH configuration file {} does not exist
+# ◆=do_configure_sshd_port
+AcZ5l2=SSH port set to
+# ◆=do_configure_sshd_root
 DqyvG8=root login allowed
 DVkFEN=root login disabled
+# ◆=configure_sshd
+D6wN7B=SSH configuration file {} does not exist
 AZKZT4=Current SSH is running on Port {}, {}
 BNOqlk=Would you like to reconfigure it?
 DzCitM=Enter new SSH port (current: {}):
 ARXwDI=Failed to set SSH port
-AcZ5l2=SSH port set to
 D6jDYn=Allow root login via SSH?
 
 # ■=python/docker/docker_install.py
-# ◆=install_ask
+# ◆=get_official_version
+A_YhNO=Error fetching official version from {}
+# ◆=install_check
 DPoN-q=Do you want to re-install Docker?
 CWj1nj=Docker version {} is installed and running
 BYPpAu=Docker requires version {}+, now it's {}
@@ -232,6 +236,7 @@ ACWfb3=Install official-provided Docker
 DGT8WM=Requires Docker version {}+, {} only supports {}
 BK01mS=Version
 ATAAW5=Please select a version to install (1-{}). Enter 0 to skip:
+DC-00j=Skip Docker installation
 
 # ■=python/file_util.py
 # ◆=copy_file
