--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -210,19 +210,23 @@ DE4sbC=安装{}完成
 # ■=python/config_sshd.py
 # ◆=run_command
 DWA16R=命令执行失败: {}
-# ◆=configure_sshd
-D6wN7B=SSH 配置文件 {} 不存在
+# ◆=do_configure_sshd_port
+AcZ5l2=SSH 端口已设置为
+# ◆=do_configure_sshd_root
 DqyvG8=允许 root 登录
 DVkFEN=禁止 root 登录
+# ◆=configure_sshd
+D6wN7B=SSH 配置文件 {} 不存在
 AZKZT4=当前 SSH 运行在端口 {}，{}
 BNOqlk=否需要重新配置?
 DzCitM=请输入新的 SSH 端口 (当前: {}):
 ARXwDI=设置 SSH 端口失败
-AcZ5l2=SSH 端口已设置为
 D6jDYn=允许 root 通过 SSH 登录?
 
 # ■=python/docker/docker_install.py
-# ◆=install_ask
+# ◆=get_official_version
+A_YhNO=获取官方版本出错 {}
+# ◆=install_check
 DPoN-q=重新安装 Docker?
 CWj1nj=Docker 版本 {} 已安装并运行
 BYPpAu=需要 Docker 版本 {}+, 目前为 {}
@@ -232,6 +236,7 @@ ACWfb3=安装官方提供 Docker
 DGT8WM=需要 Docker 版本 {}+, {} 仅支持 {}
 BK01mS=版本
 ATAAW5=请选择一个安装版本 (1-{}). 回车(0)即跳过安装:
+DC-00j=跳过 Docker 安装
 
 # ■=python/file_util.py
 # ◆=copy_file
