简化逻辑（赋值不影响return code），去掉tuple_xxx相关代码

--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -3,7 +3,7 @@
 INIT_SUDO_RUN="Dieses Skript muss mit sudo ausgeführt werden. Erneutes Ausführen mit sudo..."
 INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}):"
 INIT_SHELL_LANG_FOMAT_ERROR="Ungültiges Sprachformat. Bitte erneut eingeben (z. B. de_DE | de_DE.UTF-8)"
-INIT_SHELL_LANG_NOT_IN_LIST="Nicht in der Locale-Liste. Bitte erneut eingeben (überprüfen Sie [ locale -a ])"
+INIT_SHELL_LANG_NOT_IN_LIST="{} Nicht in der Locale-Liste. Bitte erneut eingeben (überprüfen Sie [ locale -a ])"
 INIT_SYSTEM_START="Systemstart initialisieren"
 INIT_SYSTEM_END="Systemende initialisieren"
 INIT_LINUX_UNSUPPORT="Nicht unterstützte Linux-Distribution"
