增加read_multi_util.py; 增加docker_run.py 增加docker_run(配置docker的.env参数，决定安装哪些模块) 更名sh_check_docker => sh_check_docker_install 增加sh_check_docker_run

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -78,12 +78,6 @@ Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
 ATkIIM=Monitoring process {}...
 APOzfr=Completed
 
-# ■=lib/docker.sh
-# ◆=show_notice
-A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
-# ◆=infra_setup
-Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
-
 # ■=lib/docker_install.sh
 # ◆=check_docker
 DpkDjV=Docker installation failure
@@ -238,6 +232,11 @@ BK01mS=Version
 ATAAW5=Please select a version to install (1-{}). Enter 0 to skip:
 DC-00j=Skip Docker installation
 
+# ■=python/docker/docker_run.py
+# ◆=run
+AgozfB=\nPlease select the Docker infrastructure components to enable (multiple choices allowed):
+AN05my=\nnPlease select the Docker applications to enable (multiple choices allowed):
+
 # ■=python/file_util.py
 # ◆=copy_file
 AlJdHZ=Source file does not exist
@@ -335,6 +334,18 @@ Cp93zR=Server is configured with a dynamic IP
 AzA-3k=Server may be configured with a dynamic IP
 CCY-S1=Would you like to adjust it?
 C2TtcR=Do not modify the network configuration
+
+# ■=python/read_multi_util.py
+# ◆=print_tips
+BdMwjn=Multiple choice format like 1 2 3; selecting the same item again will deselect it; press Enter to finish
+# ◆=print_current_selection
+ANwTZ5=None
+AGPu6_=Current selection
+# ◆=toggle_selection
+DmgGjB=Deselected
+# ◆=multiple_selector
+B0JrED=✘ Please enter a valid number (1-{})
+DnNBxU=✘ Invalid number: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
