--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -78,12 +78,6 @@ Ar7Pu3={} 安装失败，请手动安装，日志: {} [{}]
 ATkIIM=监控进程 {}...
 APOzfr=完成
 
-# ■=lib/docker.sh
-# ◆=show_notice
-A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
-# ◆=infra_setup
-Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
-
 # ■=lib/docker_install.sh
 # ◆=check_docker
 DpkDjV=Docker 安装失败
@@ -238,6 +232,11 @@ BK01mS=版本
 ATAAW5=请选择一个安装版本 (1-{}). 回车(0)即跳过安装:
 DC-00j=跳过 Docker 安装
 
+# ■=python/docker/docker_run.py
+# ◆=run
+AgozfB=\n请选择要启用的 Docker 基础设施 (多选组件):
+AN05my=\n请选择要启用的 Docker 应用 (多选组件):
+
 # ■=python/file_util.py
 # ◆=copy_file
 AlJdHZ=源文件不存在
@@ -335,6 +334,18 @@ Cp93zR=服务器已配置动态IP
 AzA-3k=服务器可能已配置动态IP
 CCY-S1=是否需要调整IP?
 C2TtcR=不修改网络配置
+
+# ■=python/read_multi_util.py
+# ◆=print_tips
+BdMwjn=多选格式：如 1 2 3；再次选择相同项目可取消选择，回车结束
+# ◆=print_current_selection
+ANwTZ5=无
+AGPu6_=当前选择
+# ◆=toggle_selection
+DmgGjB=取消选择
+# ◆=multiple_selector
+B0JrED=✘ 请输入有效编号 (1-{})
+DnNBxU=✘ 无效编号: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
